[gd_scene load_steps=12 format=3 uid="uid://byug3y7oa617d"]

[ext_resource type="Script" path="res://globals/camera_manager/camera_manager.gd" id="1_sm454"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="2_beaht"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="3_2r6l4"]
[ext_resource type="Resource" uid="uid://euybd2w0bax" path="res://addons/phantom_camera/examples/resources/tween/player_phantom_camera_2d_tween.tres" id="4_u38eg"]
[ext_resource type="Script" path="res://addons/shaker/src/Vector2/shaker_component2D.gd" id="5_mvnr7"]
[ext_resource type="Script" path="res://addons/shaker/data/Vector2/BaseShakerType2D.gd" id="6_1rl6a"]
[ext_resource type="Script" path="res://addons/shaker/data/Vector2/ShakerTypeRandom2D.gd" id="7_5p2o1"]
[ext_resource type="Script" path="res://addons/shaker/data/Single/BaseShakerType1D.gd" id="8_350ao"]
[ext_resource type="Script" path="res://addons/shaker/data/Vector2/ShakerPreset2D.gd" id="9_6uywx"]

[sub_resource type="Resource" id="Resource_otayp"]
script = ExtResource("7_5p2o1")
seed = 0
amplitude = Vector2(1, 1)
offset = Vector2(0, 0)
BlendingMode = 0
fade_in = 0.0
fade_out = 0.0
start_percent = 0.0
end_percent = 1.0
_temp_graph = false
bake_internal = 64

[sub_resource type="Resource" id="Resource_arth6"]
script = ExtResource("9_6uywx")
PositionShake = Array[ExtResource("6_1rl6a")]([SubResource("Resource_otayp")])
RotationShake = Array[ExtResource("8_350ao")]([])
ScaleShake = Array[ExtResource("6_1rl6a")]([])
bake_internal = 64
__follow_timeline = false

[node name="CameraManager" type="Node2D"]
script = ExtResource("1_sm454")

[node name="Camera2D" type="Camera2D" parent="."]
physics_interpolation_mode = 2
position = Vector2(-1.4013e-45, 1.4013e-45)
zoom = Vector2(2, 2)

[node name="PhantomCameraHost" type="Node" parent="Camera2D"]
script = ExtResource("2_beaht")

[node name="PlayerPhantomCamera2D" type="Node2D" parent="."]
position = Vector2(-1.4013e-45, 1.4013e-45)
script = ExtResource("3_2r6l4")
priority = 5
follow_mode = 5
zoom = Vector2(2, 2)
tween_resource = ExtResource("4_u38eg")
tween_on_load = false
follow_damping = true
dead_zone_width = 0.416
dead_zone_height = 0.63
show_viewfinder_in_play = true
draw_limits = true

[node name="ShakerComponent2D" type="Node2D" parent="PlayerPhantomCamera2D"]
script = ExtResource("5_mvnr7")
shakerPreset = SubResource("Resource_arth6")
